--- a/app/assets/stylesheets/active_admin/_forms.css.scss
+++ b/app/assets/stylesheets/active_admin/_forms.css.scss
@@ -172,9 +172,13 @@ form {
   
   fieldset.buttons li { 
     float:left; 
-    padding-right:0.5em;
-    padding-top: 0;
-    &.cancel { margin-left: 0.3em; padding: 5px; a { @include light-button; @include icon(#777, 9px);} }
+    padding: 0;
+
+    &.cancel {
+      a {
+        @include light-button; @include icon(#777, 9px);
+      }
+    }
   }
 
 }
